# commonItems

./: .gitignore  CMakeLists.txt
ModLoader/: ModParser.cpp
cmake/: commonItemsConfig.cmake.in
